--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,9 +3,8 @@ version: '3.1'
 services:
 
   wordpress:
-    image: rcventura/wordpress:v1.0.0
+    image: wordpress
     restart: always
-    depends_on: [ "db" ]
     ports:
       - 8080:80
     environment:
@@ -15,27 +14,18 @@ services:
       WORDPRESS_DB_NAME: exampledb
     volumes:
       - wordpress:/var/www/html
-    networks:
-      - wp-net
 
   db:
     image: mysql:5.7
     restart: always
     environment:
-      MYSQL_DATABASE: exampledb
+      MYSQL_DATABASE: wordpress
       MYSQL_USER: exampleuser
       MYSQL_PASSWORD: examplepass
       MYSQL_RANDOM_ROOT_PASSWORD: '1'
     volumes:
       - db:/var/lib/mysql
-    networks:
-            - wp-net
 
 volumes:
   wordpress:
   db:
-
-networks:
-    wp-net: 
-        driver: bridge
-        
