--- a/kube/mysql/mysql-secret.yml
+++ b/kube/mysql/mysql-secret.yml
@@ -1,7 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata: 
-  name: wp-db-secrets
+  name: mysql-secrets
 type: Opaque
 data: 
-  MYSQL_ROOT_PASSWORD: bXVkYXIxMjM0
+  MYSQL_DATABASE: d29yZHByZXNz
+  MYSQL_USER: d29yZHByZXNz
+  MYSQL_PASSWORD: ZXhhbXBsZXBhc3M=
+  MYSQL_ROOT_PASSWORD: cm9vdA==
+  
