--- a/kube/wordpress/wp-pvc.yml
+++ b/kube/wordpress/wp-pvc.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-volume
+  name: wordpress-volume
   namespace: default
 spec:
   accessModes:
-    - ReadWriteOnce
+   - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 20Gi
   storageClassName: local-storage
