--- a/kube/mysql/gcp/mysql-statefulset.yml
+++ b/kube/mysql/gcp/mysql-statefulset.yml
@@ -1,26 +1,24 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  name: wp-mysql
-  labels:
-    app: mysql
+  name: mysql-statefulset
 spec:
-  replicas: 1
   selector:
     matchLabels:
       app: mysql
       tier: db
-  strategy:
-    type: Recreate
+  serviceName: "database"
+  replicas: 3
+  updateStrategy:
+    type: RollingUpdate
   template:
     metadata:
       labels:
         app: mysql
-        tier: db
     spec:
       containers:
       - name: mysql
-        image: mysql:8.0
+        image: rcventura/mysql:8.0
         env:
         - name: MYSQL_ROOT_PASSWORD
           valueFrom: 
@@ -44,10 +42,18 @@ spec:
               key: MYSQL_PASSWORD
         ports:
         - containerPort: 3306
+          name: mysql
         volumeMounts:
         - name: mysql-data
           mountPath: /var/lib/mysql
-      volumes:
-      - name: mysql-data
-        persistentVolumeClaim:
-          claimName: mysql-volume
+  volumeClaimTemplates:
+  - metadata:
+      name: mysql-pvc
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      resources:
+        requests:
+          storage: 1Gi
+
+
+     
