--- a/kube/mysql/minikube/mysql-storage-mk.yml
+++ b/kube/mysql/minikube/mysql-storage-mk.yml
@@ -1,6 +1,6 @@
-kind: StorageClass
 apiVersion: storage.k8s.io/v1
+kind: StorageClass
 metadata:
-  name: local-storage
+  name: mysql-local-storage
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
