--- a/kube/wordpress/gcp/wp-service-lb-gke.yml
+++ b/kube/wordpress/gcp/wp-service-lb-gke.yml
@@ -1,7 +1,7 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: wordpress-service
+  name: wordpress-service-lb
   labels: 
     app: wordpress
 spec:
