--- a/kube/wp-pvc-mk.yml
+++ b/kube/wp-pvc-mk.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-volume
+  name: wordpress-volume
   namespace: default
 spec:
   accessModes:
@@ -9,4 +9,4 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  storageClassName: local-storage
+  storageClassName: wp-local-storage
