--- a/kube/wordpress/gcp/wp-deployment-gke.yml
+++ b/kube/wordpress/gcp/wp-deployment-gke.yml
@@ -29,17 +29,17 @@ spec:
           - name: WORDPRESS_DB_PASSWORD
             valueFrom:
               secretKeyRef:
-                  name: wp-secrets
+                  name: wp-secrets-gke
                   key:  WORDPRESS_DB_PASSWORD
           - name: WORDPRESS_DB_USER
             valueFrom: 
               secretKeyRef:
-                name: wp-secrets
+                name: wp-secrets-gke
                 key:  WORDPRESS_DB_USER
           - name: WORDPRESS_DB_NAME
             valueFrom: 
               secretKeyRef:
-                name: wp-secrets
+                name: wp-secrets-gke
                 key:  WORDPRESS_DB_NAME
       volumes:
       - name: wordpress-data
